examples/test/testpolicy19844.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19844
  namespace: namespace239
spec:
  podSelector:
    matchLabels:
      key40: value9
      key42: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value45
          key45: value44
      podSelector:
        matchLabels:
          key47: value8
